--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
+    "@tailwindcss/vite": "^4.1.7",
+    "primevue": "^4.3.4",
+    "tailwindcss": "^4.1.7",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13"
   },
   "devDependencies": {
