--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
     "tailwindcss-primeui": "^0.6.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@types/node": "^22.15.21",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
