--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.9.0",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.4",
     "tailwindcss": "^4.1.7",
     "tailwindcss-primeui": "^0.6.1",
