--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   web:
     build: 
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     image: oscarruiz05/challenge-store-web:latest
     ports:
       - "80:80"
