--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,18 +1,31 @@
-server {
-  listen 80;
-  server_name _;
+user  nginx;
+worker_processes  auto;
 
-  root /usr/share/nginx/html;
-  index index.html;
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
-  location / {
-    try_files $uri $uri/ /index.html;
-  }
 
-  # Opcional: cache de archivos estáticos
-  location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|otf)$ {
-    expires 30d;
-    access_log off;
-    add_header Cache-Control "public";
-  }
+events {
+    worker_connections  1024;
+}
+
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    #tcp_nopush     on;
+    
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    include /etc/nginx/conf.d/*.conf;
 }
